--- a/HelloJavaFx/src/main/resources/counterApp/counter-app-view.fxml
+++ b/HelloJavaFx/src/main/resources/counterApp/counter-app-view.fxml
@@ -11,12 +11,13 @@
 <HBox xmlns:fx="http://javafx.com/fxml"
       fx:controller="counterApp.CounterController">
 
-    <padding>
-        <Insets bottom="20.0" left="100.0" right="20.0" top="20.0"/>
-    </padding>
+<!--    <padding>-->
+<!--        <Insets bottom="20.0" left="100.0" right="20.0" top="20.0"/>-->
+<!--    </padding>-->
 
     <Button fx:id="btnDecrease" onMouseClicked="#decrease">-</Button>
     <Label fx:id="lbValue">1</Label>
     <Button fx:id="btnIncrease" onMouseClicked="#increase">+</Button>
+    <Label fx:id="error" />
 
 </HBox>
