--- a/League-client-JavaFX/src/main/resources/com/leagueclientjavafx/champion-view.fxml
+++ b/League-client-JavaFX/src/main/resources/com/leagueclientjavafx/champion-view.fxml
@@ -12,14 +12,14 @@
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
-            <ImageView fx:id="bgSplash" fitHeight="1200.0" fitWidth="1920.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="bgSplash" fitHeight="1200.0" fitWidth="1920.0" layoutX="-26.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@splash/Ahri_0.jpg" />
                </image>
             </ImageView>
             <Label fx:id="labelName" layoutX="191.0" layoutY="158.0" text="Ahri" textFill="WHITE">
                <font>
-                  <Font size="60.0" />
+                  <Font name="System Bold" size="80.0" />
                </font>
             </Label>
             <Button fx:id="btnBack" layoutX="175.0" layoutY="911.0" mnemonicParsing="false" text="Back">
@@ -27,6 +27,11 @@
                   <Font size="30.0" />
                </font>
             </Button>
+            <Label fx:id="lbTitle" layoutX="213.0" layoutY="310.0" text="Label" textFill="#d3d7b9">
+               <font>
+                  <Font name="Helvetica Light" size="35.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
