--- a/Web/dec22_dynamic_rendering/style.css
+++ b/Web/dec22_dynamic_rendering/style.css
@@ -26,3 +26,21 @@
         
     }
 }
+
+/* #search-container {
+    border: 1px solid red;
+    width: 100%;
+} */
+
+#search {
+    width: 50%;
+    padding: 8px;
+    /* margin-left: auto;
+    margin-right: auto; */
+    margin-bottom: 16px;
+}
+
+/* * {
+    margin: 0;
+    padding: 0;
+} */
