--- a/hello-react/src/pokemon.css
+++ b/hello-react/src/pokemon.css
@@ -69,3 +69,35 @@
         grid-template-columns: repeat(2, 1fr);
     }   
 } */
+
+
+.modal-overlay {
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    top: 0;
+
+    width: 100vw;
+    height: 100vh;
+    
+    /* From https://css.glass */
+    background: rgba(36, 2, 2, 0.38);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .modal-content {
+        width: 400px;
+        min-height: 400px;
+        background-color: white;
+        padding: 32px;
+        border-radius: 16px;
+        box-shadow: 
+            0 8px 32px rgba(0, 0, 0, 0.9),
+            
+    }
+}
+
